# Zephyr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GenerateReflectionFiles.py  IncludePath.txt  ReflectionClasses.generated.h  ReflectionClasses.h  main.cpp  vcpkg.json
Editor/: Application.cpp  Application.h  CMakeLists.txt
Editor/Widgets/: BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  ConsoleWindow.cpp  ConsoleWindow.h  ViewportWindow.cpp  ViewportWindow.h  WidgetBase.cpp  WidgetBase.h
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt  CommonMacro.h  ReflectionClasses.cpp  ReflectionClasses.h  Types.h
Engine/Core/Coroutine/: Coroutine.h
Engine/Core/Event/: Event.h
Engine/Core/Logger/: Formatter.h  Logger.cpp  Logger.h
Engine/Core/Math/: BasicType.h
Engine/Core/Object/: Object.cpp  Object.h
Engine/Core/Path/: Path.cpp  Path.h
Engine/Core/Reflection/: BaseType.h  BaseType.h.inl  JsonDeserializer.cpp  JsonDeserializer.h  JsonSerializer.cpp  JsonSerializer.h  MetaType.cpp  MetaType.h  Serialization.h  TemplateType.h  TemplateType.h.inl  TypeTraits.h
Engine/Core/Reflection/Interface/: ISerializable.h
Engine/Core/Renderer/: BaseRenderer.cpp  BaseRenderer.h  FrameRenderer.cpp  FrameRenderer.h  StaticMeshRenderer.cpp  StaticMeshRenderer.h  StaticModelRenderer.cpp  StaticModelRenderer.h
Engine/Core/Utils/: Guid.cpp  Guid.h  Singleton.h  TypeConverter.cpp  TypeConverter.h
Engine/Funcation/: CMakeLists.txt
Engine/Funcation/Components/: ComponentBase.cpp  ComponentBase.h  RendererComponentBase.cpp  StaticModelRendererComponent.cpp  StaticModelRendererComponent.h
Engine/Funcation/Object/: Object.h
Engine/Funcation/Render/Renderer/: BaseRenderer.cpp  BaseRenderer.h  FrameRenderer.cpp  StaticMeshRenderer.cpp  StaticMeshRenderer.h
Engine/Function/: CMakeLists.txt
Engine/Function/Components/: RendererComponentBase.h  StaticModelRendererComponent.cpp
Engine/Function/Object/: Object.cpp
Engine/Function/Render/Renderer/: BaseRenderer.h  FrameRenderer.h  StaticMeshRenderer.cpp
Engine/Platform/: CMakeLists.txt
Engine/Platform/OpenGL/: ElementBufferObject.cpp  ElementBufferObject.h  FrameBufferObject.cpp  FrameBufferObject.h  FrameRender.cpp  FrameRender.h  RenderBufferObject.cpp  RenderBufferObject.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h
Engine/Platform/OpenGL/Renderer/: BaseRenderer.cpp  BaseRenderer.h  FrameRenderer.cpp  FrameRenderer.h  StaticMeshRenderer.cpp  StaticMeshRenderer.h
Engine/Resource/: AssetBase.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt
Engine/Resource/Geometry/: GeometryType.cpp  GeometryType.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
Engine/Resource/Interface/: Asset.h
Engine/Resource/Shaders/: test.frag  test.vert
Reflection/: CMakeLists.txt  Finder.cpp  Finder.h  ReflectedClass.cpp  ReflectedClass.h  main.cpp
